--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "celebrate": "^12.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.0",
     "sqlite3": "^4.1.1"
